--- a/style.css
+++ b/style.css
@@ -1,7 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap');
 *{
-    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
-    font-family: 'Poppins', sans-serif;
+    box-sizing: border-box;
+}
+.page1{
+    background-color: #E5E5E5;
+    height: 100vh;
+}
+.dotted{
+    position: relative;
+    border: 2px dashed #6CB840 ;
+    border-radius: 50%;
+    margin-top: 240px;
+    margin-left: 655px;
+    width: 500px;
+    height: 500px;
 }
