--- a/style.css
+++ b/style.css
@@ -44,3 +44,22 @@
     margin-left: 65%;
     width: 150px;
 }
+nav{
+    margin-top: 20px;
+}
+nav ul{
+    display: flex;
+    margin-top: 40px;
+    justify-content: space-between;
+    width: 80%;
+    margin: auto;
+}
+nav ul li{
+    list-style: none;
+    margin-top: 35px;
+}
+nav ul li a{
+    text-decoration: none;
+    color: black;
+    font-weight: bold;
+}
