--- a/style.css
+++ b/style.css
@@ -12,6 +12,16 @@
 i{
     border-color: black;
 }
+.circle{
+    position: absolute;
+    width: 100%;
+    height: 80%;
+    top: -50px;
+    left: 0;
+    background-color: #B8E79C;
+    clip-path: circle(500px at 950px 0px);
+    z-index: -1;
+}
 .dotted{
     position: relative;
     border: 2px dashed #6CB840 ;
