--- a/style.css
+++ b/style.css
@@ -5,8 +5,10 @@
     padding: 0;
     box-sizing: border-box;
 }
-.page1{
+body{
     background-color: #E5E5E5;
+}
+.page1{
     height: 100vh;
 }
 i{
@@ -19,8 +21,42 @@ i{
     top: -50px;
     left: 0;
     background-color: #B8E79C;
-    clip-path: circle(500px at 950px 0px);
+    clip-path: circle(500px at 1150px 0px);
     z-index: -1;
+}
+.img_container1{
+    float: right;
+}
+.img_container1 img:nth-child(1){
+    margin-right: 150px;
+    width: 80px;
+}
+.img_container1 img:nth-child(2){
+    margin-right: 260px;
+    margin-top: 25px;
+    width: 80px;
+}
+.img_container2{
+    float: right;
+    /* display: flex; */
+}
+.img_container2 img:nth-child(3){
+    margin-right: 180px;
+    width: 60px;
+    height: 60px;
+    margin-bottom: 120px;
+}
+.img_container2 img:nth-child(2){
+    margin-right: 50px;
+    width: 200px;
+    height: 200px;
+    margin-bottom: 40px;
+}
+.img_container2 img:nth-child(1){
+    margin-right: 50px;
+    width: 80px;
+    height: 80px;
+    margin-bottom: 150px;
 }
 .dotted{
     position: relative;
@@ -53,9 +89,9 @@ i{
     margin-bottom: 30px;
 }
 .img6{
-    margin-top: 280px;
+    margin-top: -10px;
     margin-left: 65%;
-    width: 150px;
+    
 }
 nav{
     margin-top: 20px;
@@ -79,13 +115,55 @@ nav ul li a{
 .title{
     text-align: center;
     margin-bottom: 10px;
+    font-weight: bolder;
+    font-size:x-large;
 }
 .title h2{
-    font-weight: bold;
+    font-weight:bolder;
 }
-
 .food_title{
     float: left;
-    margin-left: 128px;
-    width: 400px;
+    margin-left: 150px;
+    width: 420px;
+}
+.food_title h1{
+    font-size:xx-large;
+    font-weight: bolder;
+    margin-bottom: 22px;
+    margin-top: 60px;
+}
+.food_title h2{
+    font-weight: bolder;
+    margin-bottom: 12px;
+}
+.food_title h5{
+    font-weight: bolder;
+    font-size: 800;
+    word-spacing: 1px;
+}
+.btn{
+    width: 168px;
+    margin-top: 35px;
+    height: 45px;
+    border-radius: 30px;
+    background-color: #6CB840;
+    border: none;
+    color: white;
+    font-weight: 700;
+    margin-bottom: 50px;
+}
+.page2{
+    width: 100%;
+    margin: auto;
+    background-color: #FFFFFF;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.eatpage2{
+    text-align: center;
+    margin-right: 100px;
+}
+.eatpage2 p{
+    font-weight: bolder;
 }
