--- a/style.css
+++ b/style.css
@@ -200,3 +200,113 @@ nav ul li a{
     text-align: center;
     margin-top: 10px;
 }
+.deals{
+    background-color: #C9ECB5;
+    padding: 40px;
+    height: 60vh;
+
+}
+.deals h2{
+    text-align: center;
+}
+.deals_container{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly; 
+    width: 80%;
+    margin: auto;
+}
+.first{
+    width: 65%;
+    position: relative;
+    top: -60px;
+    margin-left: 10px;
+    margin-bottom: 300px;
+}
+.second{
+    position: absolute;
+    width: 60%;
+    left: 100px;
+    top: 175px;
+}
+.info_text{
+    width: 50%;
+    float: right;
+    margin-bottom: 700px;
+}
+.info_text h1{
+    color: #6CB840;
+    font-weight: bolder;
+    padding-top: 57px;
+}
+.info_text h2{
+    text-align: left;
+    font-weight: bolder;
+}
+.info_text p{
+    text-align: center;
+    font-weight: bolder;
+}
+.contact{
+    background-color: #FFF5DD;
+    height: 60vh;
+    display: flex;
+    flex-direction:column;
+    justify-content: center;
+    align-items: center;
+    padding-left: 30%;
+    padding-right: 30%;
+}
+.contact h2{
+    margin-top: 8px;
+}
+.contact p{
+    margin-bottom: 20px;
+    width: 80%;
+    text-align: center;
+    font-weight: bolder;
+    margin-top: 30px;
+}
+.contact input{
+    width: 450px;
+    height: 50px;
+    border-radius: 30px;
+    border: none;
+}
+.contact input:placeholder-shown{
+    font-weight: 700;
+}
+.footer_container{
+    background-color: #F1FAEC;
+    height: 30vh;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+.footer_container .foot4 {
+    display: flex;
+    flex-direction: column;
+}
+.foot4 button{
+    margin-top: 30px;
+    background-color: #6CB840;
+    border: none;
+    outline: 0;
+    color: white;
+    font-weight: bold;
+    width: 70px;
+    height: 30px;
+}
+.footer_container .foot3{
+    display: flex;
+    flex-direction: column;
+    width: 180px;
+}
+.footer_container .foot2{
+    width: 160px;
+    margin-right: 500px;
+}
+.footer_container .foot1{
+    width: 12%;
+    border-right: 2px dashed #81C35A;
+}
