--- a/style.css
+++ b/style.css
@@ -14,13 +14,13 @@ body{
 i{
     border-color: black;
 }
-.circle{
+.circlebackground{
     position: absolute;
     width: 100%;
     height: 80%;
+    background-color: #B8E79C;
     top: -50px;
     left: 0;
-    background-color: #B8E79C;
     clip-path: circle(500px at 1150px 0px);
     z-index: -1;
 }
@@ -59,7 +59,11 @@ i{
     height: 80px;
     margin-bottom: 150px;
 }
-.dotted{
+.dottedalignment{
+    margin-top: 240px;
+    margin-left: 655px;
+    width: 500px;
+    height: 500px;
     position: relative;
     border: 2px dashed #6CB840 ;
     border-radius: 50%;
@@ -68,42 +72,41 @@ i{
     width: 500px;
     height: 500px;
 }
-.dotted > img:first-child{
+.dottedalignment > img:first-child{
     transform: rotate(0deg) translateY(-30px);
     margin-left: 30px;
     width: 90px;
 }
 
-.dotted > img:nth-child(2) {
+.dottedalignment > img:nth-child(2) {
     transform: rotate(45deg) translateY(-115px);
-    width: 90px;
     transform: translate(40%, -80%);
-}
-.dotted > img:nth-child(3){
-    transform: rotate(90deg) translateY(-105px);
     width: 90px;
+}
+.dottedalignment > img:nth-child(3){
+    transform: rotate(90deg) translateY(-105px);
     transform: translate(90%, -55%);
+    width: 90px;
 }
 
-.dotted > img:nth-child(4){
+.dottedalignment > img:nth-child(4){
     transform: rotate(-45deg) translateY(-2px);
-    width: 120px;
     transform: translate(50%, 50%);
+    width: 120px;
 }
 
-.dotted > img:nth-child(5){
+.dottedalignment > img:nth-child(5){
     transform: rotate(-90deg) translateY(200px);
+    transform: translate(240%, 80%);
     margin-left: 240px;
     margin-bottom: 25px;
     width: 90px;
-    transform: translate(240%, 80%);
 }
 .img6{
     margin-top: -400px;
+    transform: translate(-40%, -40%);
     margin-left: 58%;
     width: 180px;
-    transform: translate(-40%, -40%);
-    
 }
 nav{
     margin-top: 20px;
@@ -124,32 +127,32 @@ nav ul li a{
     color: black;
     font-weight: bold;
 }
-.title{
+.maintitle{
     text-align: center;
     margin-bottom: 10px;
     font-weight: bolder;
     font-size:x-large;
 }
-.title h2{
+.maintitle h2{
     font-weight:bolder;
 }
-.food_title{
+.content1{
     float: left;
     margin-left: 150px;
     width: 420px;
 }
-.food_title h1{
+.content1 h1{
     font-size: xxx-large;
     font-weight: bolder;
     margin-bottom: 22px;
     margin-top: 60px;
 }
-.food_title h2{
+.content1 h2{
     font-weight: bolder;
     margin-bottom: 12px;
     font-size: xx-large;
 }
-.food_title h5{
+.content1 h5{
     font-weight: xx-bolder;
     font-size: 1200;
     word-spacing: 1px;
@@ -189,13 +192,13 @@ nav ul li a{
     width: 80%;
     margin-left: 10%;
 }
-.menu_section1{
+.container4{
     display: flex;
     align-items: center;
     height: 30vh;
     padding: 60px;
 }
-.menu_item{
+.container5{
     background-color: #FFFFFF;
     margin: 30px;
     height: 140px;
@@ -203,11 +206,11 @@ nav ul li a{
     position: relative;
   
 }
-.menu_item p{
+.container5 p{
     text-align: right;
     padding: 0px 10px;
 }
-.menu_item img{
+.container5 img{
     width: 200px;
     position: absolute;
     left: -80px;
@@ -294,38 +297,38 @@ nav ul li a{
     font-weight: 700;
 }
 .footer{
+    display: flex;
+    justify-content: space-around;
     background-color: #F1FAEC;
     height: 30vh;
-    display: flex;
     align-items: center;
-    justify-content: space-around;
 }
-.footer .foot4 {
+.footer .d {
     display: flex;
     flex-direction: column;
 }
-.foot4 button{
+.d button{
     margin-top: 30px;
-    background-color: #6CB840;
-    border: none;
-    outline: 0;
     color: white;
     font-weight: bold;
     width: 70px;
     height: 30px;
+    background-color: #6CB840;
+    border: none;
+    outline: 0;
 }
-.footer .foot3{
+.footer .c{
+    width: 180px;
     display: flex;
     flex-direction: column;
-    width: 180px;
 }
-.footer .foot2{
+.footer .b{
     width: 160px;
     font-weight: bolder;
 }
-.footer .foot1{
+.footer .a{
     width: 20%;
+    font-weight: bolder;
     padding-right: 30px;
     border-right: 2px dashed #81C35A;
-    font-weight: bolder;
 }
